raffia/tests/error/scss/value/operators/plus-trailing-dot.snap
---
source: raffia/tests/error.rs
---
error: component value is expected
  ┌─ plus-trailing-dot.scss:1:8
  │
1 │ a {b: +.}
  │        ^


